<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/image_watermark_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" 
    android:background="@drawable/dialog_background">
    <ImageView 
        android:id="@+id/page_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"/>
    <ImageView 
        android:id="@+id/watermark_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"/>
    <RelativeLayout 
        android:id="@+id/watermark_size"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/page_image"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true">
        <TextView 
            android:id="@+id/size_small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:textSize="16sp"
            android:text="@string/size_small"/>
        <TextView 
            android:id="@+id/size_middle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:textSize="16sp"
            android:text="@string/size_middle"/>
        <TextView 
            android:id="@+id/size_large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:textSize="16sp"
            android:text="@string/size_large"/>
    </RelativeLayout>
    <Button 
        android:id="@+id/sure_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/watermark_size"
        android:layout_marginTop="10dp"
        android:text="@string/sure"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="20dp"/>
    <Button 
        android:id="@+id/cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/watermark_size"
        android:layout_marginTop="10dp"
        android:text="@string/cancel"
        android:layout_alignParentRight="true"
        android:layout_marginRight="20dp"/>

</RelativeLayout>
