<?xml version="1.0" encoding="utf-8"?>
<FrameLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:match="http://schemas.android.com/apk/res-auto" 
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:id="@+id/login_layout"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:orientation="vertical" >
	    
	    <LinearLayout
	        android:id="@+id/input_name"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:padding="10dp">
	        <TextView 
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:layout_weight="2"
	            android:text="@string/user_name"
	            android:gravity="center"/>
	        <EditText 
	            android:id="@+id/name"
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:layout_weight="7"
	            android:singleLine="true"
	            android:inputType="text"/>
	    </LinearLayout>
	    <LinearLayout
	        android:id="@+id/input_pwd"
	        android:layout_below="@id/input_name"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:padding="10dp">
	        <TextView 
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:layout_weight="2"
	            android:text="@string/pwd"
	            android:gravity="center"/>
	        <EditText 
	            android:id="@+id/pwd"
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:layout_weight="7"
	            android:singleLine="true"
	            android:inputType="textPassword"/>
	    </LinearLayout>
	    <LinearLayout
	        android:id="@+id/login_btn"
	        android:layout_below="@id/input_pwd"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:padding="10dp">
	        <Button 
	            android:id="@+id/login"
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:text="@string/login"
	            android:gravity="center"/>
	        <Button
	            android:id="@+id/register"
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:text="@string/register"
	            android:layout_weight="1"/>
	    </LinearLayout>
	    <Button
	        android:id="@+id/offline"
	        android:layout_below="@id/login_btn"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="10dp"
	        android:layout_marginRight="10dp"
	        android:text="@string/offline"/>

	</RelativeLayout>
	<TextView 
	    android:id="@+id/network_tips"
	    android:layout_width="match_parent"
	    android:layout_height="30dp"
	    android:gravity="center"
	    android:visibility="gone"
	    android:background="#000000"
	    android:text="@string/net_tips"
	    android:textColor="#ffffff"/>
	<RelativeLayout
	    android:id="@+id/logining_view" 
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:visibility="gone">
	    <com.csu.view.matchview.util.MatchView 
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_centerInParent="true"
	        match:text="LOGINING"
	        match:textColor="#000000"/>
	</RelativeLayout>
</FrameLayout>

